# yolact

./: .gitignore  README.md  coco_eval.py  create_coco_tfrecord.py  create_coco_tfrecord.sh  cur_segment.npy  deformable_conv2d.patch  detection.py  infer.py  label_map.pbtxt  mask_p.npy  mask_p_crop.npy  masks.npy  obj_cls.npy  pos_mask_gt.npy  pos_prior_box.npy  segment_gt.npy  to_tflite.py  train.py  train.sh  yolact.py  yolactModule.py
backbone/: dcn_v2.py  resnet.py  resnet_v2.py
data/: anchor.py  create_coco_tfrecord.py  dataset_coco.py  tfrecord_decoder.py  tfrecord_lib.py  yolact_parser.py
dcn_v2/: CMakeLists.txt  deformable_conv.cpp  deformable_conv.cu  deformable_conv2d.cpp  deformable_conv2d.h  deformable_conv2d_utils.h
layers/: fpn.py  head.py  protonet.py
loss/: loss_yolact.py
protos/: string_int_label_map.proto  string_int_label_map_pb2.py
tensorflow_addons/: tensorflow_addons-0.11.2-cp36-cp36m-linux_x86_64.whl  tensorflow_addons-0.13.0-cp36-cp36m-linux_x86_64.whl  tensorflow_addons-0.17.0.dev0-cp36-cp36m-linux_x86_64.whl
test/: tf2.ipynb
test/.ipynb_checkpoints/: tf2-checkpoint.ipynb
utils/: augmentation.py  box_list.py  coco_evaluation.py  coco_tools.py  create_prior.py  learning_rate_schedule.py  utils.py
